--- a/style.css
+++ b/style.css
@@ -1,17 +1,26 @@
 
 .heading
 {
-font-size: 25px;
+font-size: 35px;
 width: 70%;
 margin: 0px;
-background-color: lightcoral;
+color: white;
 margin-top: 20px;
-font-weight: lighter;
+font-weight: bolder;
 }
 
 #status
 {
 font-size: 18px;
+color: lavender;
+font-weight: bold;
+}
+
+#baby_status{
+    font-size: 18px;
+    color: lavender;
+    border: 1px 1px lavender;
+    font-weight: bold;
 }
 
 body{
@@ -21,8 +30,9 @@ body{
 
 canvas{
     border: 2px 2px solid ;
-    border-color: bisque;
+    border-color: plum;
     border-radius: 10px;
-    box-shadow: 10px 10px 10px burlywood;
+    box-shadow: 10px 10px 10px white;
+    margin-top: 100px;
 }
 
